# Rust-Newsletter

./: Cargo.toml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telementry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
