[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
actix-web = "4.0.1"
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }
serde = {version = "1.0.137", features = ["derive"]}
sqlx = { version = "0.5.5", default-features = false, features = [ "runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }


[dev-dependencies]
reqwest = "0.11.10"
